--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -1,7 +1,6 @@
-@import url('variables.css');
-
-@import url('base/typography.css');
 @import url('base/global.css');
+@import url('base/variables.css');
+@import url('base/typography.css');
 
 @import url('components/buttons.css');
 @import url('components/forms.css');
