--- a/src/EventPlanning.Web/Areas/Admin/Views/Venue/Create.cshtml
+++ b/src/EventPlanning.Web/Areas/Admin/Views/Venue/Create.cshtml
@@ -13,8 +13,8 @@
 
                     <div class="c-admin-header">
                         <div class="d-flex align-items-center">
-                            <i class="bi bi-plus-square fs-4 me-3"></i>
-                            <h5 class="mb-0 fw-bold">Create New Venue</h5>
+                            <i class="bi bi-plus-square fs-4 me-3 text-white"></i>
+                            <h5 class="mb-0 fw-bold text-white">Create New Venue</h5>
                         </div>
                     </div>
 
