--- a/src/EventPlanning.Web/wwwroot/css/components/view-toggle.css
+++ b/src/EventPlanning.Web/wwwroot/css/components/view-toggle.css
@@ -31,28 +31,32 @@
 
 /* --- LIST VIEW MODIFICATIONS --- */
 
-.list-view .col-md-6,
-.list-view .col-lg-4,
-.list-view .col-xl-3 {
-    width: 100% !important;
+#itemsContainer.list-view > div {
+    width: 100%;
     flex: 0 0 100%;
     max-width: 100%;
 }
 
 .list-view .card {
     flex-direction: row;
-    align-items: center;
-    min-height: 200px;
+    align-items: stretch;
+    min-height: 220px;
     background-color: var(--bg-surface);
     border: 1px solid var(--border-light);
 }
 
-.list-view .card-img-top {
-    width: 250px;
-    height: 100%;
+.list-view .card .card-img-top {
+    width: 280px;
+    height: auto;
     min-height: 220px;
     object-fit: cover;
-    border-radius: 12px 0 0 12px !important;
+    border-radius: 12px 0 0 12px;
+}
+
+.list-view .card .card-img-top.text-white {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .list-view .card-body {
@@ -75,10 +79,11 @@
     .list-view .card {
         flex-direction: column;
     }
-    .list-view .card-img-top {
+
+    .list-view .card .card-img-top {
         width: 100%;
         height: 200px;
         min-height: auto;
-        border-radius: 12px 12px 0 0 !important;
+        border-radius: 12px 12px 0 0;
     }
 }
