--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -1,5 +1,5 @@
-@import url('base/global.css');
 @import url('base/variables.css');
+@import url('base/global.css');
 @import url('base/typography.css');
 
 @import url('components/buttons.css');
@@ -7,6 +7,9 @@
 @import url('components/cards.css');
 @import url('components/pagination.css');
 @import url('components/view-toggle.css');
+@import url('components/navbar.css');
+@import url('components/hero.css');
+@import url('components/footer.css');
 
 @import url('components/admin/layout.css');
 @import url('components/admin/navigation.css');
@@ -19,7 +22,3 @@
 @import url('pages/events/details.css');
 @import url('pages/events/form.css');
 @import url('pages/events/my-events.css');
-
-@import url('layout/navbar.css');
-@import url('layout/hero.css');
-@import url('layout/footer.css');
